Finalized tile design and layout.

--- a/lib/app/l10n/app_en.arb
+++ b/lib/app/l10n/app_en.arb
@@ -1,5 +1,11 @@
 {
+  "ingredientHomePageTitle": "Ingredients",
   "ingredientHomePageTabLabel": "Ingredients",
+  "ingredientHomePageCreateTooltip": "Create ingredient",
+
+  "ingredientCreatePageTitle": "Create ingredient",
+
+  "ingredientEditPageTitle": "Edit ingredient",
 
   "ingredientListNoItems": "No ingredients to display.",
 
