Refactored router logic.

--- a/lib/app/l10n/app_en.arb
+++ b/lib/app/l10n/app_en.arb
@@ -1,6 +1,7 @@
 {
+  "ingredientTabLabel": "Ingredients",
+
   "ingredientHomePageTitle": "Ingredients",
-  "ingredientHomePageTabLabel": "Ingredients",
   "ingredientHomePageCreateTooltip": "Create ingredient",
 
   "ingredientCreatePageTitle": "Create ingredient",
