--- a/lib/app/messages/hu.arb
+++ b/lib/app/messages/hu.arb
@@ -1,17 +1,17 @@
 {
   "@@locale": "hu",
 
-  "ingredientHomePageTabLabel": "",
+  "ingredientHomeTabLabel": "",
 
   "ingredientListNoItems": "",
 
-  "shoppingHomePageDeleteAllText":       "Minden elemet törölni szeretnél?",
-  "shoppingHomePageDeleteAllButton":     "Mindet",
-  "shoppingHomePageDeleteCheckedText":   "Csak a pipált elemeket szeretnéd törölni vagy mindet?",
-  "shoppingHomePageDeleteCheckedButton": "Pipált",
-  "shoppingHomePageDeleteTooltip":       "Elemek törlése", 
-  "shoppingHomePageTabLabel":            "Bevásárlás",
-  "shoppingHomePageTitle":               "Bevásárlólista",
+  "shoppingHomeDeleteAllText":       "Minden elemet törölni szeretnél?",
+  "shoppingHomeDeleteAllButton":     "Mindet",
+  "shoppingHomeDeleteCheckedText":   "Csak a pipált elemeket szeretnéd törölni vagy mindet?",
+  "shoppingHomeDeleteCheckedButton": "Pipált",
+  "shoppingHomeDeleteTooltip":       "Elemek törlése", 
+  "shoppingHomeTabLabel":            "Bevásárlás",
+  "shoppingHomeTitle":               "Bevásárlólista",
   
   "shoppingListNoItems": "Nincs semmi a bevásárlólistádban. Adj hozzá elemeket a fenti mező segítségével.",
 
