--- a/lib/app/messages/en.arb
+++ b/lib/app/messages/en.arb
@@ -45,5 +45,9 @@
   "shoppingInputLabel": "Add new item",
 
   "settingsTab": "Settings",
-  "settingsHomeTitle": "Settings"
+  "settingsHomeTitle": "Settings",
+  "settingsHomeDataTitle": "Data management",
+  "settingsHomeDataText": "Here you can export your local data to a safe place, or import previously exported data.",
+  "settingsHomeDataExportButton": "Export data",
+  "settingsHomeDataImportButton": "Import data"
 }
