Implemented import/export.

--- a/lib/app/messages/en.arb
+++ b/lib/app/messages/en.arb
@@ -49,5 +49,9 @@
   "settingsHomeDataTitle": "Data management",
   "settingsHomeDataText": "Here you can export your local data to a safe place, or import previously exported data.",
   "settingsHomeDataExportButton": "Export data",
-  "settingsHomeDataImportButton": "Import data"
+  "settingsHomeDataExportSuccess": "Successfully exported app data.",
+  "settingsHomeDataImportButton": "Import data",
+  "settingsHomeDataImportSuccess": "Successfully imported app data.",
+  "settingsHomeDataImportConfirmationText": "Are you sure you want to overwrite you app data with the imported data?",
+  "settingsHomeDataImportConfirmationButton": "Confirm"
 }
