Created diary route and home page.

--- a/lib/app/messages/en.arb
+++ b/lib/app/messages/en.arb
@@ -91,5 +91,8 @@
   "recipeFormIngredients": "Ingredients",
   "recipeFormIngredientsAddTooltip": "Add ingredients",
   "recipeFormIngredientsNoItems": "Add ingredients with the button above",
-  "recipeFormTotalCalories": "Total calories"
+  "recipeFormTotalCalories": "Total calories",
+
+  "diaryTab": "Calculator",
+  "diaryHomePageTitle": "Calculator"
 }
