Implemented common item selector dialog.

--- a/lib/app/messages/en.arb
+++ b/lib/app/messages/en.arb
@@ -1,6 +1,12 @@
 {
   "@@locale": "en",
 
+  "appItemSelectorDialogTitle": "Select items",
+  "appItemSelectorDialogSearchLabel": "Search items",
+  "appItemSelectorDialogNoItems": "No items available",
+  "appItemSelectorDialogCancel": "Discard",
+  "appItemSelectorDialogSave": "Save",
+
   "ingredientTab": "Ingredients",
 
   "ingredientHomeTitle": "Ingredients",
